--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>HAKAN</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -71,13 +71,15 @@
           <img
             src="https://picsum.photos/id/236/1600/600"
             class="d-block w-100"
+            style="height: 20rem"
             alt="..."
           />
         </div>
         <div class="carousel-item">
           <img
-            src="https://picsum.photos/id/237/1600/600"
+            src="https://picsum.photos/id/238/1600/600"
             class="d-block w-100"
+            style="height: 20rem"
             alt="..."
           />
         </div>
@@ -85,6 +87,7 @@
           <img
             src="https://picsum.photos/id/235/1600/600"
             class="d-block w-100"
+            style="height: 20rem"
             alt="..."
           />
         </div>
@@ -110,20 +113,19 @@
     </div>
 
     <!--container-start-->
-    <div class="container mt-5">
-      <div class="row">
-        <!--row - start-->
+    <div class="container m-5">
+      <!--row - start-->
+      <div class="row m-5">
+        <!--about us - start-->
         <div class="col-sm-6">
-          <!--about us - start-->
           <img
             class="w-100 img-thumbnail"
-            src="https://picsum.photos/id/230/200/50"
+            src="https://picsum.photos/id/230/600/400"
             alt=""
           />
         </div>
 
         <div class="col-sm-6">
-          <!--about us - end-->
           <h2>Hakkımızda</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, eum?
@@ -141,17 +143,163 @@
             Ex!
           </p>
         </div>
-
-        <!--products - start-->
-        <!--products - end-->
-        <!--pictures - start-->
-        <!--pictures - end-->
+        <!--about us - end-->
       </div>
       <!--row - end-->
+
+      <!--products - start-->
+      <div class="row mt-2 ml-5">
+        <div class="col-sm4 m-3">
+          <div class="card" style="width: 18rem">
+            <img
+              src="https://picsum.photos/id/231/600/400"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Ürün 1</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <!--product - end-->
+        <div class="col-sm4 m-3">
+          <div class="card" style="width: 18rem">
+            <img
+              src="https://picsum.photos/id/232/600/400"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Ürün 2</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <!--product - end-->
+        <div class="col-sm4 m-3">
+          <div class="card" style="width: 18rem">
+            <img
+              src="https://picsum.photos/id/233/600/400"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Ürün 3</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <!--product - end-->
+      </div>
+      <!--products - end-->
+
+      <!--pictures - start-->
+      <div class="row m-5">
+        <div class="col-sm-12">
+          <h4>Resimler</h4>
+        </div>
+        <div class="col-sm">
+          <img
+            src="https://picsum.photos/id/240/600/400"
+            alt=""
+            class="w-100 img-thumbnail"
+          />
+        </div>
+        <div class="col-sm">
+          <img
+            src="https://picsum.photos/id/241/600/400"
+            alt=""
+            class="w-100 img-thumbnail"
+          />
+        </div>
+        <div class="col-sm">
+          <img
+            src="https://picsum.photos/id/242/600/400"
+            alt=""
+            class="w-100 img-thumbnail"
+          />
+        </div>
+        <div class="col-sm">
+          <img
+            src="https://picsum.photos/id/243/600/400"
+            alt=""
+            class="w-100 img-thumbnail"
+          />
+        </div>
+        <div class="col-sm mr-5">
+          <img
+            src="https://picsum.photos/id/244/600/400"
+            alt=""
+            class="w-100 img-thumbnail"
+          />
+        </div>
+      </div>
+      <!--pictures - end-->
     </div>
     <!--container - end-->
 
     <!--footer - start-->
+    <div class="bg-dark text-light">
+      <footer class="container py-5 mt-5">
+        <div class="row ml-5">
+          <div class="col-12 col-md">
+            <h5>Hakan</h5>
+            <small class="d-block mb-3 text-muted">© 2017-2022</small>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Features</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Cool stuff</a></li>
+              <li><a class="text-muted" href="#">Random feature</a></li>
+              <li><a class="text-muted" href="#">Team feature</a></li>
+              <li><a class="text-muted" href="#">Stuff for developers</a></li>
+              <li><a class="text-muted" href="#">Another one</a></li>
+              <li><a class="text-muted" href="#">Last time</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Resource</a></li>
+              <li><a class="text-muted" href="#">Resource name</a></li>
+              <li><a class="text-muted" href="#">Another resource</a></li>
+              <li><a class="text-muted" href="#">Final resource</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Business</a></li>
+              <li><a class="text-muted" href="#">Education</a></li>
+              <li><a class="text-muted" href="#">Government</a></li>
+              <li><a class="text-muted" href="#">Gaming</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>About</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Team</a></li>
+              <li><a class="text-muted" href="#">Locations</a></li>
+              <li><a class="text-muted" href="#">Privacy</a></li>
+              <li><a class="text-muted" href="#">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
     <!--footer - end-->
 
     <!-- Optional JavaScript; choose one of the two! -->
